--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -14,4 +14,8 @@
     <None Include=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
