--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
     <PackageReference Include="Funogram" Version="2.0.3" />
   </ItemGroup>
 
