--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Config.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Default.Config.yaml" />
     <None Include=".editorconfig" />
   </ItemGroup>
 
