--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
     <PackageReference Include="Funogram" Version="2.0.3" />
+    <PackageReference Include="Funogram.Telegram" Version="4.4.2.3" />
   </ItemGroup>
 
   <ItemGroup>
