--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,6 +13,9 @@
 
   <ItemGroup>
     <None Include="Default.Config.yaml" />
+    <None Include="Config.yaml" />
+    <None Include=".gitignore" />
+    <None Include=".gitattributes" />
     <None Include=".editorconfig" />
   </ItemGroup>
 
