--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Config.fs" />
+    <Compile Include="Utils.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
