--- a/Insight.Creator.Bot.fsproj
+++ b/Insight.Creator.Bot.fsproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="Config.fs" />
     <Compile Include="Utils.fs" />
+    <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
