Refactor entry point, move config to it
No need for separate Config module. Config belongs to root of the app,
so loading it there, checking for config file existence, writing to
console if it's not there and passing config to functions through
parameters is the best. Also no need to use async blocks in Program
module. All the code there is synchronous hence imperative style suits
it better than half-functional, half-imperative. Code becomes much more
readable and elegant.

--- a/Default.Config.yaml
+++ b/Default.Config.yaml
@@ -1,7 +1,7 @@
 Token: ""
 Server:
   Address: "http://localhost/"
-  ListenTo: "http://*:4444/"
+  Listen: "http://*:4444/"
 Bot:
   AllowedUsers: [ 0 ]
 Db:
