--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -11,6 +11,8 @@
     <Compile Include="Model.fs" />
     <Compile Include="Context.fs" />
     <Compile Include="ContextFactory.fs" />
+    <Compile Include="Migrations\20210830113007_Initial.fs" />
+    <Compile Include="Migrations\ContextModelSnapshot.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
