--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.FSharp" Version="5.0.3-beta006" />
     <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
+    <PackageReference Include="FsToolkit.ErrorHandling" Version="2.7.0" />
     <PackageReference Include="Funogram" Version="2.0.3" />
     <PackageReference Include="Funogram.Telegram" Version="4.4.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
