--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="Migrations\20210901083632_Initial.fs" />
     <Compile Include="Migrations\ContextModelSnapshot.fs" />
     <Compile Include="Repo.fs" />
+    <Compile Include="Message.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
