--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="nuget.config" />
     <Compile Include="Core.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Model.fs" />
