--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -33,8 +33,8 @@
     <PackageReference Include="EntityFrameworkCore.FSharp" Version="5.0.3-beta006" />
     <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
     <PackageReference Include="FsToolkit.ErrorHandling" Version="2.7.0" />
-    <PackageReference Include="Funogram" Version="2.0.3" />
-    <PackageReference Include="Funogram.Telegram" Version="4.4.2.3" />
+    <PackageReference Include="InsightClub.Funogram" Version="2.0.3" />
+    <PackageReference Include="InsightClub.Funogram.Telegram" Version="4.4.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
