--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -9,11 +9,6 @@
   <ItemGroup>
     <Compile Include="Core.fs" />
     <Compile Include="Config.fs" />
-    <Compile Include="Model.fs" />
-    <Compile Include="Context.fs" />
-    <Compile Include="ContextFactory.fs" Condition="'$(Configuration)'=='DEBUG'" />
-    <Compile Include="Migrations\20210901083632_Initial.fs" />
-    <Compile Include="Migrations\ContextModelSnapshot.fs" />
     <Compile Include="Repo.fs" />
     <Compile Include="Message.fs" />
     <Compile Include="Api.fs" />
@@ -33,6 +28,7 @@
     <PackageReference Include="EntityFrameworkCore.FSharp" Version="5.0.3-beta006" />
     <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
     <PackageReference Include="FsToolkit.ErrorHandling" Version="2.7.0" />
+    <PackageReference Include="InsightClub.Db" Version="0.1.0" />
     <PackageReference Include="InsightClub.Funogram" Version="2.0.3" />
     <PackageReference Include="InsightClub.Funogram.Telegram" Version="4.4.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
