--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="Core.fs" />
     <Compile Include="Config.fs" />
+    <Compile Include="Repo.fs" />
     <Compile Include="Message.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
