--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Helpers.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Repo.fs" />
@@ -26,7 +27,6 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
-    <PackageReference Include="FsToolkit.ErrorHandling" Version="2.7.0" />
     <PackageReference Include="InsightClub.Funogram" Version="2.0.3" />
     <PackageReference Include="InsightClub.Funogram.Telegram" Version="4.4.3" />
     <PackageReference Include="Microsoft.FSharpLu.Json" Version="0.11.7" />
