--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Config.fs" />
     <Compile Include="Repo.fs" />
     <Compile Include="Message.fs" />
+    <Compile Include="Services.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
