--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -13,6 +13,8 @@
     <Compile Include="Repo.fs" />
     <Compile Include="Services.fs" />
     <Compile Include="State.fs" />
+    <Compile Include="Command.fs" />
+    <Compile Include="Render.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
