--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -7,6 +7,10 @@
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
+    <RuntimeIdentifier Condition="'$(Configuration)'=='DEBUG'">win-x64</RuntimeIdentifier>
+    <RuntimeIdentifier Condition="'$(Configuration)'=='RELEASE'">linux-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
