--- a/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot.fsproj
@@ -21,7 +21,7 @@
     <Compile Include="Storage.fs" />
     <Compile Include="Services.fs" />
     <Compile Include="State.fs" />
-    <Compile Include="Commands.fs" />
+    <Compile Include="Dispatcher.fs" />
     <Compile Include="Render.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Program.fs" />
