--- a/InsightClub.Creator.Bot/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot/InsightClub.Creator.Bot.fsproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dropbox.Api" Version="6.28.0" />
     <PackageReference Include="InsightClub.Funogram" Version="2.0.3" />
     <PackageReference Include="InsightClub.Funogram.Telegram" Version="4.4.3" />
     <PackageReference Include="Microsoft.FSharpLu.Json" Version="0.11.7" />
