--- a/InsightClub.Creator.Bot/InsightClub.Creator.Bot.fsproj
+++ b/InsightClub.Creator.Bot/InsightClub.Creator.Bot.fsproj
@@ -28,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dropbox.Api" Version="6.28.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.11.10" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.10" />
     <PackageReference Include="InsightClub.Funogram" Version="2.0.3" />
     <PackageReference Include="InsightClub.Funogram.Telegram" Version="4.4.3" />
     <PackageReference Include="Microsoft.FSharpLu.Json" Version="0.11.7" />
